Update service titles to use paragraph tags for improved semantics

--- a/index.html
+++ b/index.html
@@ -309,7 +309,9 @@
 								<div class="icon-box">
 									<span class="icon ti-id-badge"></span>
 								</div>
-								<h5><a href="https://gofirstonline.nl/service/">Administratief Personeel</a></h5>
+								<h5>
+									<p>Administratief Personeel</p>
+								</h5>
 								<div class="text">Wij leveren efficiënt en betrouwbaar personeel voor uw planning- en
 									administratiediensten, zodat uw bedrijfsprocessen vlekkeloos verlopen.</div>
 							</div>
@@ -320,7 +322,9 @@
 								<div class="icon-box">
 									<span class="icon ti-headphone-alt"></span>
 								</div>
-								<h5><a href="https://gofirstonline.nl/service/">Klantenservice Medewerkers</a></h5>
+								<h5>
+									<p>Klantenservice Medewerkers</p>
+								</h5>
 								<div class="text">Professionele en vriendelijke klantenservice medewerkers die zorgen
 									voor tevreden klanten en uitstekende service.</div>
 							</div>
@@ -331,7 +335,9 @@
 								<div class="icon-box">
 									<span class="icon ti-desktop"></span>
 								</div>
-								<h5><a href="https://gofirstonline.nl/service/">IT Medewerkers</a></h5>
+								<h5>
+									<p>IT Medewerkers</p>
+								</h5>
 								<div class="text">Hoogopgeleide IT-specialisten met kennis van de nieuwste technologieën
 									en oplossingen.</div>
 							</div>
@@ -344,7 +350,9 @@
 								<div class="icon-box">
 									<span class="icon ti-truck"></span>
 								</div>
-								<h5><a href="https://gofirstonline.nl/service/">Logistiek Personeel</a></h5>
+								<h5>
+									<p>Logistiek Personeel</p>
+								</h5>
 								<div class="text">Betrouwbare logistiek medewerkers voor een efficiënte en tijdige
 									levering van goederen.</div>
 							</div>
@@ -355,7 +363,9 @@
 								<div class="icon-box">
 									<span class="icon ti-desktop"></span>
 								</div>
-								<h5><a href="https://gofirstonline.nl/service/">Softwareontwikkelaar en AI</a></h5>
+								<h5>
+									<p>Softwareontwikkelaar en AI</p>
+								</h5>
 								<div class="text">Geavanceerde softwareontwikkelings- en AI-oplossingen voor uw
 									zakelijke behoeften.</div>
 							</div>
@@ -366,7 +376,9 @@
 								<div class="icon-box">
 									<span class="icon ti-palette"></span>
 								</div>
-								<h5><a href="https://gofirstonline.nl/service/">Creatieve Diensten</a></h5>
+								<h5>
+									<p>Creatieve Diensten</p>
+								</h5>
 								<div class="text">Innovatieve en creatieve oplossingen voor uw marketing en design
 									behoeften.</div>
 							</div>
