Update partner logos to use anchor tags for improved accessibility and linking

--- a/index.html
+++ b/index.html
@@ -395,18 +395,18 @@
 					<h2>Onze Partners</h2>
 				</div>
 				<div class="partner-logo-container">
-					<div class="partner-logo">
+					<a href="https://diversitaszorg.nl/" target="_blank" class="partner-logo">
 						<img src="s/a/adil/images/logo1.svg" alt="Partner 1">
-					</div>
-					<div class="partner-logo">
+					</a>
+					<a href="https://www.travelelectric.com/" target="_blank" class="partner-logo">
 						<img src="s/a/adil/images/logo2.png" alt="Partner 2">
-					</div>
-					<div class="partner-logo">
+					</a>
+					<a href="https://amsholland.com/" target="_blank" class="partner-logo">
 						<img src="s/a/adil/images/logo3.png" alt="Partner 3">
-					</div>
-					<div class="partner-logo">
-						<img src="s/a/adil/images/logo4.png" alt="Partner 3">
-					</div>
+					</a>
+					<a href="https://www.consultingexperts.nl/" target="_blank" class="partner-logo">
+						<img src="s/a/adil/images/logo4.png" alt="Partner 4">
+					</a>
 					<!-- Add more partner logos as needed -->
 				</div>
 			</div>
