Update phone icon to use WhatsApp for better user recognition

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 								<li><a href="mailto:contact@gofirstonline.nl"><span
 											class="icon icofont-envelope"></span>
 										contact@gofirstonline.nl</a></li>
-								<li><a href="tel:+31 684 592 624"><span class="icon icofont-phone"></span> +31 684 592
+								<li><a href="tel:+31 684 592 624"><span class="icon icofont-whatsapp"></span> +31 684
+										592
 										624
 									</a></li>
 								<li><a href="contact/index.html"><span class="icon icofont-location-pin"></span> Rés Amr
